--- a/.travis.yaml
+++ b/.travis.yaml
@@ -7,4 +7,4 @@ before_install:
   - docker build -t yursov/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true yursov/docker-react npm run test
+  - docker run -e CI=true yursov/docker-react npm run test -- --coverage
