--- a/.travis.yaml
+++ b/.travis.yaml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t yursov/docker-react -f Dockerfile.dev .
+  - docker build -t YuraSl/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true yursov/docker-react npm run test -- --coverage
+  - docker run -e CI=true YuraSl/docker-react npm run test -- --coverage
